tests/compile_fail/enum_with_no_variants.rs
use michis_rand_distr_derive::StandardDistribution;

#[derive(StandardDistribution)]
pub enum DoesNotSupportEnumWithNoVariants {}

fn main() {}
