tests/compile_fail/enum_with_no_variants.stderr
error: proc-macro derive panicked
 --> tests/compile_fail/enum_with_no_variants.rs:3:10
  |
3 | #[derive(StandardDistribution)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Cannot derive StandardDistribution for enums with zero variants
